--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -95,7 +95,7 @@
                         android:layout_marginEnd="5dp"
                         android:hint="@string/email"
                         android:textColorHint="@color/compare_gray"
-                        app:hintTextColor="@color/edit"
+                        app:hintTextColor="@color/compare_gray"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/img_email"
@@ -108,6 +108,7 @@
                             android:background="@null"
                             android:fontFamily="@font/mulish_regular"
                             android:singleLine="true"
+                            android:text="@={motorVM.username}"
                             android:textColor="@color/edit"
                             android:textSize="15sp" />
                     </com.google.android.material.textfield.TextInputLayout>
@@ -143,7 +144,7 @@
                         android:layout_marginEnd="10dp"
                         android:hint="@string/password"
                         android:textColorHint="@color/compare_gray"
-                        app:hintTextColor="@color/edit"
+                        app:hintTextColor="@color/compare_gray"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/img_password"
@@ -157,6 +158,7 @@
                             android:layout_height="wrap_content"
                             android:background="@null"
                             android:fontFamily="@font/mulish_regular"
+                            android:text="@={motorVM.password}"
                             android:inputType="textPassword"
                             android:singleLine="true"
                             android:textColor="@color/edit"
@@ -189,6 +191,7 @@
                     android:fontFamily="@font/mulish_regular"
                     android:singleLine="true"
                     android:text="@string/reset"
+                    android:onClick="@{(v)-> motorVM.onClickAction(v)}"
                     android:textAlignment="textStart"
                     android:textColor="@color/reset"
                     android:textSize="15sp"
@@ -203,6 +206,7 @@
                     android:layout_marginTop="30dp"
                     android:elevation="5dp"
                     android:text="@string/login"
+                    android:onClick="@{(v)-> motorVM.onClickAction(v)}"
                     android:id="@+id/login_btn"
                     android:textAllCaps="true"
                     android:textColor="#FFFFFF"
@@ -277,6 +281,7 @@
                     android:fontFamily="@font/mulish_regular"
                     android:singleLine="true"
                     android:text="@string/create_account"
+                    android:onClick="@{(v)-> motorVM.onClickAction(v)}"
                     android:textAlignment="textStart"
                     android:textColor="@color/reset"
                     android:textSize="15sp"
