--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -639,5 +639,6 @@
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/gl_center"
             app:layout_constraintTop_toBottomOf="@+id/btn_google" />
+        <include layout="@layout/prograssbar"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
